css: fix bottom margin that broke vertical-align

--- a/apps/web_theme/static/theme/css/base.css
+++ b/apps/web_theme/static/theme/css/base.css
@@ -233,7 +233,7 @@ input.checkbox {
 }
 
 .form .group {
-  margin-bottom: 15px;
+  margin-bottom: 0px;
 }
 
 .form div.left {
